add header, and cardblock

--- a/index.html
+++ b/index.html
@@ -7,6 +7,95 @@
     <title>ProjectCss</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header class="header">
+        <h1>Features</h1>
+    </header>
+    <main class="main">
+        <div class="cartblock">
+            <div class="cartblock__first">
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="cartblock__second">
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+                <div class="cartblock__cart">
+                    <div class="cartblock__item">
+                        <div class="outline">
+                            <img class="logosvg" src="img/icons8-shop-50.png" alt="">
+                        </div>
+                    </div>
+                    <div class="cartblock__item">
+                        <h3>Online testing</h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quibusdam repudiandae magnam minima dicta, animi autem tempore porro molestiae consequuntur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
