--- a/index.html
+++ b/index.html
@@ -96,6 +96,69 @@
                 </div>
             </div>
         </div>
+        <div class="progblock">
+            <div class="progblock__title">
+                <h2>Programs</h2>
+            </div>
+            <div class="progblock__first">
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="progblock__second">
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+                <div class="progblock__cart">
+                    <div class="progblock__cart_item">
+                        <h3>Pre-college education</h4>
+                        <p class="progblock_par">
+                            Broaden the creative <br>
+                            horizon of your kids
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
