--- a/index.html
+++ b/index.html
@@ -97,5 +97,25 @@
             </div>
         </div>
     </main>
+    <!-- <footer class="footer">
+        <div class="footer__main">
+            <div class="footer__logo">
+                <div class="footer__logo_img">
+                    <img src="" alt="">
+                </div>
+                <h2 class="footer__logo_title">Education</h2>
+            </div>
+            <div class="footer__menu">
+                <ol>
+                    <a href=""><li>Home</li></a>
+                    <a href=""><li>About us</li></a>
+                    <a href=""><li>Course</li></a>
+                    <a href=""><li>Teachers</li></a>
+                    <a href=""><li>Programs </li></a>
+                    <a href=""><li>Contact</li></a>
+                </ol>
+            </div>
+        </div>
+    </footer> -->
 </body>
 </html>
